Take away horizontal scroll to remove bug

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -2,6 +2,10 @@
 
 // -- Put custom style under this point -- //
 
+body {
+  overflow-x: hidden;
+}
+
 #post-page h2 {
   color: $main-color;
 }
